// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should groups at 0 if the groupCount field is not defined (just added user) 1`] = `
<tr>
  <td
    className="thin nowrap"
  >
    <Connect(Avatar)
      hash="7daf6c79d4802916d83f6266e24850af"
      name="John Doe"
      size={36}
    />
  </td>
  <td
    className="nowrap text-middle"
  >
    <strong>
      John Doe
    </strong>
    <span
      className="note little-spacer-left"
    >
      john
    </span>
  </td>
  <td
    className="text-right text-middle"
  >
    organization.members.x_groups.0
  </td>
  <td
    className="nowrap text-middle text-right"
  >
    <ActionsDropdown>
      <ManageMemberGroupsForm
        member={
          Object {
            "avatar": "7daf6c79d4802916d83f6266e24850af",
            "login": "john",
            "name": "John Doe",
          }
        }
        organization={
          Object {
            "canAdmin": true,
            "key": "foo",
            "name": "Foo",
          }
        }
      />
      <ActionsDropdownDivider />
      <RemoveMemberForm
        member={
          Object {
            "avatar": "7daf6c79d4802916d83f6266e24850af",
            "login": "john",
            "name": "John Doe",
          }
        }
        organization={
          Object {
            "canAdmin": true,
            "key": "foo",
            "name": "Foo",
          }
        }
      />
    </ActionsDropdown>
  </td>
</tr>
`;

exports[`should not render actions and groups for non admin 1`] = `
<tr>
  <td
    className="thin nowrap"
  >
    <Connect(Avatar)
      hash=""
      name="Admin Istrator"
      size={36}
    />
  </td>
  <td
    className="nowrap text-middle"
  >
    <strong>
      Admin Istrator
    </strong>
    <span
      className="note little-spacer-left"
    >
      admin
    </span>
  </td>
</tr>
`;

exports[`should render actions and groups for admin 1`] = `
<tr>
  <td
    className="thin nowrap"
  >
    <Connect(Avatar)
      hash=""
      name="Admin Istrator"
      size={36}
    />
  </td>
  <td
    className="nowrap text-middle"
  >
    <strong>
      Admin Istrator
    </strong>
    <span
      className="note little-spacer-left"
    >
      admin
    </span>
  </td>
  <td
    className="text-right text-middle"
  >
    organization.members.x_groups.3
  </td>
  <td
    className="nowrap text-middle text-right"
  >
    <ActionsDropdown>
      <ManageMemberGroupsForm
        member={
          Object {
            "avatar": "",
            "groupCount": 3,
            "login": "admin",
            "name": "Admin Istrator",
          }
        }
        organization={
          Object {
            "canAdmin": true,
            "key": "foo",
            "name": "Foo",
          }
        }
      />
      <ActionsDropdownDivider />
      <RemoveMemberForm
        member={
          Object {
            "avatar": "",
            "groupCount": 3,
            "login": "admin",
            "name": "Admin Istrator",
          }
        }
        organization={
          Object {
            "canAdmin": true,
            "key": "foo",
            "name": "Foo",
          }
        }
      />
    </ActionsDropdown>
  </td>
</tr>
`;
